Flows menu update

--- a/Front/src/tpl/app.html
+++ b/Front/src/tpl/app.html
@@ -117,7 +117,7 @@
                         <md-button ui-sref="app.report.lander" style="padding-top:0;">Lander</md-button>
                       </md-menu-item>
                       <md-menu-item>
-                        <md-button ui-sref="app.report.offer" style="padding-top:0;">offer</md-button>
+                        <md-button ui-sref="app.report.offer" style="padding-top:0;">Offer</md-button>
                       </md-menu-item>
                     </md-menu-content>
                   </md-menu>
