suddenChange ande fraudFilter progress linear update 0511

--- a/Front/src/tpl/suddenChange.html
+++ b/Front/src/tpl/suddenChange.html
@@ -106,7 +106,7 @@
               </div>
               <div class="table-box">
                   <md-table-container resizefraud class="repeater-log-container" style="overflow-anchor: none;">
-                      <table md-table multiple md-progress="promise">
+                      <table md-table multiple md-progress="logPromise">
                         <thead md-head fix-head>
                           <tr md-row>
                             <th md-column>Time</th>
