添加ga跟踪代码

--- a/Front/src/tpl/signin.html
+++ b/Front/src/tpl/signin.html
@@ -48,3 +48,9 @@
   </div>
 </div>
  <a class="return" href="http://www.newbidder.com"><i class="icon-long-arrow-left"></i> Return to homepage</a>
+<!-- ga -->
+<script type="text/javascript">
+  ga('set', 'page', '/#/access/signin');
+  ga('send', {'hitType': 'pageview', 'title': 'NewBidder'});
+</script>
+<!-- ga -->
