--- a/Front/src/tpl/signup.html
+++ b/Front/src/tpl/signup.html
@@ -137,3 +137,10 @@
         <img height="1" width="1" style="border-style:none;" alt="" src="//www.googleadservices.com/pagead/conversion/859286781/?label=RD3kCOGi_m4Q_dnemQM&amp;guid=ON&amp;script=0"/>
     </div>
 </noscript>
+
+<!-- ga -->
+<script type="text/javascript">
+  ga('set', 'page', '/#/access/signup');
+  ga('send', {'hitType': 'pageview', 'title': 'NewBidder'});
+</script>
+<!-- ga -->
