--- a/Front/src/tpl/signup-success.html
+++ b/Front/src/tpl/signup-success.html
@@ -20,3 +20,10 @@
     </button>
   </div>
 </div>
+
+<!-- ga -->
+<script type="text/javascript">
+  ga('set', 'page', '/#/access/signup-success');
+  ga('send', {'hitType': 'pageview', 'title': 'NewBidder'});
+</script>
+<!-- ga -->
