--- a/Front/src/tpl/fraud-filter-log-dialog.html
+++ b/Front/src/tpl/fraud-filter-log-dialog.html
@@ -18,15 +18,15 @@
         <table md-table multiple md-progress="promise">
           <thead md-head>
             <tr md-row>
-              <th md-column>Campaign</th>
-              <th md-column>Dimension</th>
-              <th md-column>Date</th>
+              <th md-column width="30%">Campaign</th>
+              <th md-column width="40%">Dimension</th>
+              <th md-column width="30%">Date</th>
             </tr>
           </thead>
           <tbody md-body>
             <tr md-row ng-repeat="logDetail in logDetails">
               <td md-cell>{{logDetail.campaign}}</td>
-              <td md-cell>{{logDetail.dimension}}</td>
+              <td md-cell>{{'IP: ' + logDetail.data.ip.join(',')}}</td>
               <td md-cell>{{logDetail.time}}</td>
             </tr>
           </tbody>
