--- a/Front/src/index.html
+++ b/Front/src/index.html
@@ -128,7 +128,7 @@
     })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
     ga('create', 'UA-93461815-1', 'auto');
-    ga('send', 'pageview');
+    ga('send', {'hitType': 'pageview', 'title': 'NewBidderIndex'});
 </script>
 <!-- ga -->
 
