--- a/www.newbidder.com/newbidder_free_teaser_en.html
+++ b/www.newbidder.com/newbidder_free_teaser_en.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+t<!DOCTYPE HTML>
 <!--[if IE 6 ]> <html id="ne_wrap" class="ne_ua_ie6 ne_ua_ielte8"> <![endif]-->
 <!--[if lt IE 7]><html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
 <!--[if IE 8]><html class="no-js lt-ie9" lang="en"> <![endif]-->
@@ -27,7 +27,7 @@
         Are you still paying off the high cost for the tracker or server? The good news is newbidder tracker decide publish an Free Plan with unlimited events for saving the money and time for affiliates. Yes, it is Free! Free! Free since next month. Newbidder is more than free but more functionality than Voluum and other tracking software.
     </div>
     <div class="free-title"><h2>The Free plan list below:</h2><a class="free-title-btn" href="http://panel.newbidder.com/#/access/signin">Try it Free</a></div>
-    <div class="free-teaser-list">
+    <div class="free-teaser-list" >
         <ul class="free-teaser-list-top">
             <li>
                 <h3><i class="icon-ok"></i>Unlimited events</h3>
