--- a/Front/src/tpl/ts-offer-select-dialog.html
+++ b/Front/src/tpl/ts-offer-select-dialog.html
@@ -4,34 +4,59 @@
             <h2 class="md-title">{{ctrl.title | translate}}</h2>
         </div>
     </md-toolbar>
-
     <md-dialog-content class="md-dialog-content">
-        <div class="table-box ts-offer-report">
-            <md-table-container resizets class="repeater-container" style="overflow-anchor: none;">
-                <table md-table md-row-select="options.rowSelection" multiple="{{options.multiSelect}}" ng-model="selected" md-progress="promise">
+        <div class="table-box ts-offer-report" id="ts_offer_selected_report_table_container">
+            <md-table-container resizets class="repeater-container">
+                <table md-table ng-model="selected" md-progress="promise">
                     <thead md-head fix-head>
                     <tr md-row>
+                        <th md-column class="checkbox-all-width">
+                          <md-checkbox-cus class="dialog-checkbox-all">
+                            <div class="md-container md-ink-ripple">
+                              <div class="md-icon"></div>
+                              <div class="md-ripple-container"></div>
+                            </div>
+                          </md-checkbox-cus>
+                        </th>
                         <th class="item-name" md-column>Offer</th>
                         <th md-column>Offer Id</th>
                         <th class="item-name" md-column>Country Code</th>
                     </tr>
                     </thead>
-                    <tbody md-body vs-repeat vs-scroll-parent=".repeater-container">
-                    <tr md-row md-select="offer.id" ng-repeat="offer in offers track by offer.id" md-auto-select="options.autoSelect">
+                    <tbody md-body id="ts_offer_selected_report_container">
+                    <!-- <tr md-row ng-repeat="offer in offers track by offer.id" md-auto-select="options.autoSelect">
                         <td class="item-name" md-cell ng-click="offerDetail(offer)"><span href="javascript:;" style="color: #337ab7">{{offer.name}}</span></td>
                         <td md-cell><span>{{::offer.offerId}}</span></td>
                         <td class="item-name" md-cell><span>{{::offer.countryCode}}</span></td>
-                    </tr>
+                    </tr> -->
                     </tbody>
                 </table>
             </md-table-container>
         </div>
     </md-dialog-content>
-
     <md-dialog-actions>
         <md-button class="md-primary disabled-btn" ng-click="ctrl.importOffers(1)" ng-disabled="!selected.length">{{'import' | translate}}
         </md-button>
         <md-button class="md-primary" ng-click="ctrl.cancel()">{{'cancel' | translate}}</md-button>
     </md-dialog-actions>
-
 </md-dialog>
+
+<script type="text/html" id="ts_offer_selected_report_tpl">
+  <% for (var i = 0, l = offers.length; i < l; i++) {%>
+  <tr class="md-row" data-id="<%=offers[i].id%>">
+    <td class="md-cell">
+      <md-checkbox type="checkbox" class="checkbox-item <%=offers[i].selected ? 'md-checked' : ''%>" data-id="<%=offers[i].id%>">
+        <div class="md-container md-ink-ripple">
+          <div class="md-icon"></div>
+          <div class="md-ripple-container"></div>
+        </div>
+      </md-checkbox>
+    </td>
+    <td class="item-name md-cell">
+      <span href="javascript:;" style="color: #337ab7"><%=offers[i].name%></span>
+    </td>
+    <td class="md-cell"><span><%=offers[i].offerId%></span></td>
+    <td class="md-cell item-name"><span><%=offers[i].countryCode%></span></td>
+  </tr>
+  <% } %>
+</script>
