修改dashbord样式&文案

--- a/Front/src/tpl/app.html
+++ b/Front/src/tpl/app.html
@@ -141,7 +141,7 @@
                     <span>{{'Conversions' | translate}}</span>
                 </a>
             </li>
-            <li ui-sref-active="active" class="nav-tips" has-permission="report.tsReport.show" operation="show">
+            <li ui-sref-active="active" class="nav-tips" has-permission="report.tsReport.show" operation="show" style="display: none;">
                 <a ui-sref="app.report.tsreport" md-ink-ripple>
                     <em class="rd"></em>
                     <span>{{'TS Report' | translate}}
