--- a/Front/src/tpl/referralProgram.html
+++ b/Front/src/tpl/referralProgram.html
@@ -2,8 +2,8 @@
 
 <div class="form-column profile-content">
   <div class="container">
-    <p>Use the below URLs to direct your referrals to either the Newbidder main page or straight to the sign-up page. All sign-ups from these links will be permanently associated with your account. Visitors to these links will have 30 day cookies placed on their computers so you may see delayed referrals. You will be receiving 5% lifetime monthly commissions on all paying referrals, both on their base fees, and overage charges. </p>
-    <p><b>You can find more info and promo materials here :</b></p>
+    <p>We have Newbidder TRK and Newbidder DSP (in the feature) referral program which award you 5% of the paying referrals.</p>
+    <p>Get the link below and spread your circle.</p>
     <div class="form-group referral-group clearfix">
       <div class="row">
       <label class="col-sm-3 control-label">Link to sign up page</label>
