--- a/Front/src/tpl/eventLog.html
+++ b/Front/src/tpl/eventLog.html
@@ -1,7 +1,6 @@
 <h1 class="setting-title">
   Event log
-  <p>Event log enables you to browse changes that were made in your account.
-  A detailed overview of this feature can be found here.</p>
+  <p>Every changes and movements will be record in the event log which helps you monitor.</p>
 </h1>
 <div class="form-column bot-blacklist" ng-show="initState=='success'">
   <div class="container event-log clearfix">
