--- a/Front/src/tpl/setUp.html
+++ b/Front/src/tpl/setUp.html
@@ -2,10 +2,14 @@
 
 <div class="form-column profile-content">
   <div class="container">
-    <div class="domain-p">
-
-      <p><i class="material-icons">info_outline</i>With Newbidder you don't need to place any PHP code on your landing pages. Visitors are redirected based on data stored in a cookie and referrer.</p>
-      <p>If your landing page has a single offer placement (within which you can have one offer, or rotate many), use the "Click URL". If your LP displays more than one offer, use the multi-offer click URL with the number at the end being the offer №. For example, if your landing page displays three offers, you'll need to add click links that end with /click/1, /click/2 and /click/3. You will then need to add/edit the LP in Newbidder and set the "Number of offers" to 3.</p>
+    <div>
+      <!-- <p><i class="material-icons">info_outline</i>With Newbidder you don't need to place any PHP code on your landing pages. Visitors are redirected based on data stored in a cookie and referrer.</p>
+      <p>If your landing page has a single offer placement (within which you can have one offer, or rotate many), use the "Click URL". If your LP displays more than one offer, use the multi-offer click URL with the number at the end being the offer №. For example, if your landing page displays three offers, you'll need to add click links that end with /click/1, /click/2 and /click/3. You will then need to add/edit the LP in Newbidder and set the "Number of offers" to 3.</p> -->
+      <p>Put the click url in the landing page &lt;a href="click url"&gt; if your lander only has one offer to redirect.</p>
+      <p>If you want test multiple offer in one lander, use the Multi-offer click URL.</p>
+      <p><span>Eg: </span>&lt;a href="xxx.domain.com/click/1"&gt;offer1&lt;/a&gt;</p>
+      <p><span style="visibility: hidden;">Eg: </span>&lt;a href="xxx.domain.com/click/2"&gt;offer2&lt;/a&gt;</p>
+      <p><span style="visibility: hidden;">Eg: </span>&lt;a href="xxx.domain.com/click/3"&gt;offer3&lt;/a&gt;</p>
     </div>
     <div class="form-group referral-group clearfix">
         <label class="col-sm-3 control-label">Click URL</label>
@@ -25,12 +29,14 @@
           <md-button clipboard class="md-raised copy-btn" text="item.mutiClickUrl" ng-click="itemUrlClick('copy2')">{{btn.copy2}}</md-button>
         </div>
     </div>
-    <div class="domain-p">
-
-      <p><i class="material-icons">info_outline</i>Server-to-server postback URLs are the most secure and reliable method to count conversions. Use the URLs below to pass conversions from affiliate networks. To get your postback links working you have to:</p>
+    <div>
+      <!-- <p><i class="material-icons">info_outline</i>Server-to-server postback URLs are the most secure and reliable method to count conversions. Use the URLs below to pass conversions from affiliate networks. To get your postback links working you have to:</p>
       <p>1.Include the <b>{click.id}</b>token in your offer URLs. For example, you can add ?subid={click.id} to the offer URL, to have the click ID passed to the postback via the <b>subid</b> parameter on the affiliate network/advertiser side.<br>
       2.Copy-paste the postback URL to your affiliate network panel. Make sure to <b>replace the tokens</b> with affiliate network-specific tokens. The following is what your postback URL would look like on a HasOffers based network: <span class="blue-word">{{mainDomain}}?cid={aff_sub} and payout={payout}</span></p>
-      <p>Consult the affiliate network documentation or support to find out which tokens you should use to pass back click ID and payout. The payout parameter is optional, if you do not use it, you can manually specify the payout in the offer configuration. Do not put these URLs or any of the tracking pixels / scripts in your landing pages.</p>
+      <p>Consult the affiliate network documentation or support to find out which tokens you should use to pass back click ID and payout. The payout parameter is optional, if you do not use it, you can manually specify the payout in the offer configuration. Do not put these URLs or any of the tracking pixels / scripts in your landing pages.</p> -->
+      <p>1、Append the {click.id} token in the parameter receiving the every single click id newbidder passed to the affiliate network.</p>
+      <p>2、Get the clickid token from affiliate network to add to the cid=Replace in the postback url, eg: [DV1] is the Avazu clickid token, then add  to the cid=[DV1], your postback url looks like: http://xxx.newbidder.com/postback?cid=[DV1]&payout=OPTIONAL&txid=OPTIONAL</p>
+      <p>3、Copy this postback url to the affiliate network globe postback setting.</p>
     </div>
     <div class="form-group referral-group clearfix">
         <label class="col-sm-2 control-label">Postback URL</label>
